ifcc-test-output/testfiles-KnownBugs-25_unknown_type/gcc-compile.txt
input.c:1:1: error: unknown type name ‘in’; did you mean ‘int’?
    1 | in main() {
      | ^~
      | int

exit status: 1
